--- a/src/components/DataExplorer/DataPreview.scss
+++ b/src/components/DataExplorer/DataPreview.scss
@@ -16,6 +16,7 @@
 
   .data-preview-scroll-container,
   .custom-scrollbar-view {
+    scroll-behavior: smooth !important;
     width: 100%;
     height: 100%;
     white-space: nowrap;
